[gd_scene load_steps=4 format=3 uid="uid://b8pqrm5xvj7k1"]

[ext_resource type="Script" path="res://scripts/lobby_scripts/lobby_page.gd" id="1_lobby"]
[ext_resource type="FontFile" uid="uid://bpm82y7rbu2cc" path="res://assets/fonts/poppins/Poppins-Bold.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://duysn8xus5rea" path="res://assets/cards/card_designs/classic_design/card_blue_bg.png" id="3_bg"]

[node name="LobbyPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.160784, 0.231373, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 500)

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "Waiting for Players"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0)

[node name="TimerContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="CenterContainer/VBoxContainer/TimerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 72
text = "20"
horizontal_alignment = 1

[node name="TimerDescLabel" type="Label" parent="CenterContainer/VBoxContainer/TimerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "seconds remaining"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0)

[node name="PlayersContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayersCountLabel" type="Label" parent="CenterContainer/VBoxContainer/PlayersContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.4, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 56
text = "1/4"
horizontal_alignment = 1

[node name="PlayersDescLabel" type="Label" parent="CenterContainer/VBoxContainer/PlayersContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "players in room"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0)

[node name="PlayersList" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Player1" type="Label" parent="CenterContainer/VBoxContainer/PlayersList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Player 1: You"
horizontal_alignment = 1

[node name="Player2" type="Label" parent="CenterContainer/VBoxContainer/PlayersList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Player 2: Waiting..."
horizontal_alignment = 1

[node name="Player3" type="Label" parent="CenterContainer/VBoxContainer/PlayersList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Player 3: Waiting..."
horizontal_alignment = 1

[node name="Player4" type="Label" parent="CenterContainer/VBoxContainer/PlayersList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Player 4: Waiting..."
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0)

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="LeaveButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Leave Room"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Start Game (Debug)"
disabled = true

[node name="HSeparator5" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0)

[node name="DebugContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="DebugLabel" type="Label" parent="CenterContainer/VBoxContainer/DebugContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "DEBUG MODE"
horizontal_alignment = 1

[node name="AddPlayerButton" type="Button" parent="CenterContainer/VBoxContainer/DebugContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Add Debug Player"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.0
